# pheeno_ros_sim

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/: gazebo_ros_ir_sensor.h  pheeno_robot.h  sensor_listener.h
include/pheeno_ros_sim/: gazebo_ros_ir_sensor.h  pheeno_robot.h
launch/: multi_pheeno_gazebo.launch  multi_pheeno_obstacle_avoidance.launch  multi_pheeno_random_walk.launch  multi_pheeno_with_camera_gazebo.launch  single_pheeno_gazebo.launch  single_pheeno_obstacle_avoidance.launch  single_pheeno_with_camera_gazebo.launch  test.launch  testbed.launch  view_pheeno_rviz.launch  view_pheeno_with_camera_rviz.launch
model/testbed/: model.sdf
models/testbed/: model.config  model.sdf
msg/: Pheeno_Cam_Analysis.msg  Pheeno_IR_Sensor.msg
scripts/: obstacle_avoidance.py  random_walk.py
src/: command_line_parser.cpp  gazebo_ros_ir_sensor.cpp  multi_pheeno_publisher_obstacle_avoidance_5.py  multi_pheeno_publisher_random_walk_10.py  multi_pheeno_publisher_random_walk_5.py  multi_pheeno_publisher_sensor_readings.py  obstacle_avoidance.cpp  obstacle_avoidance.py  pheeno_robot.cpp  random_walk.cpp  single_pheeno_publisher_obstacle_avoidance.py  single_pheeno_publisher_random_walk.py  single_pheeno_publisher_sensor_readings.py
urdf/: ir_sensor.urdf.xacro  pheeno.xacro  pheeno_with_camera.xacro  pillar.urdf.xacro  testbed_side_wall_1.xacro  testbed_side_wall_2.xacro  testbed_side_wall_3.xacro  testbed_side_wall_4.xacro  wheel.urdf.xacro
urdf/backup/: pheeno_backup.xacro  pheeno_with_camera_backup.xacro  pillar_backup.urdf.xacro
urdf/pheeno_v1/: pheeno.xacro
world/: testbed.world
worlds/: testbed.world
